--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -1,22 +1,23 @@
 #sidebar
-  .freelancing
-    %h2 Freelancing
+  %h1 About Effectif
 
-    %p
-      I'll be available for Ruby, Python or JavaScript work from
-      March 2011.
-    %p
-      If you're interested, or would like to chat about what you need,
-      please
-      = succeed "." do
-        %a{ :href => "mailto:graham@effectif.com" } get in touch
+  .bio
+    :markdown
+      Effectif is the home of [Graham Ashton](http://grahamashton.net),
+      a web developer in London.
 
-  %h2 Projects
+  %h1 Freelancing
+
+  %p
+    I'll be available for Ruby, Python or JavaScript work from
+    March 2011.
+    = succeed "." do
+      %a(href="mailto:graham@effectif.com") Get in touch
+
+  %h1 Projects
   %ul.menu
     %li
       %a{ :href => "/nesta" } Nesta CMS
-    %li
-      %a{ :href => "http://www.quizthemarket.com" } Quiz the Market
     %li
       %a{ :href => "/projects" } Recent software
     %li
@@ -25,15 +26,7 @@
   = haml :categories, :layout => false
   = haml :feed, :layout => false
 
-  %h2 About Effectif
-
-  .bio
-    :markdown
-      Effectif is the home of [Graham Ashton](http://grahamashton.net),
-      a freelance developer living in London.
-
-  %p
-    %a{ :href => "http://www.twitter.com/grahamashton" }
-      %img{ :src => "http://twitter-badges.s3.amazonaws.com/follow_me-c.png", :alt => "Follow grahamashton on Twitter" }
-
-  = haml :social, :layout => false
+  .twitter
+    %a(href="http://www.twitter.com/grahamashton")
+      %img(src="http://twitter-badges.s3.amazonaws.com/follow_me-c.png" 
+           alt="Follow grahamashton on Twitter") 
