Dropped underline on links in large fonts.

--- a/views/master.sass
+++ b/views/master.sass
@@ -212,6 +212,8 @@ section.articles
   article
     h1
       text-shadow: none
+      a
+        text-decoration: none
     p.read_more
       @include adjust-font-size(1, 0, 0)
       margin-top: -$base-vertical-margin
