--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -28,5 +28,5 @@
 
   .twitter
     %a(href="http://www.twitter.com/grahamashton")
-      %img(src="http://twitter-badges.s3.amazonaws.com/follow_me-c.png" 
+      %img(src="http://twitter-badges.s3.amazonaws.com/follow_me-b.png" 
            alt="Follow grahamashton on Twitter") 
