Changed colours to various tints of orange.

--- a/views/local.sass
+++ b/views/local.sass
@@ -1,8 +1,5 @@
 @import "mixins.sass"
-
-$link-color: #3F63DA
-$hover-link-color: lighten($link-color, 15%)
-$nav-link-color: desaturate($link-color, 55%)
+@import "colours.sass"
 
 code
   @include adjust-font-size(0.95, 0, 0)
@@ -24,13 +21,13 @@ code
   ul.menu
     list-style: none
 
-    a
-      color: $nav-link-color
-      border-bottom-color: #fff
-    &:hover a
-      color: $link-color
-    a:hover
-      color: $hover-link-color
+  a
+    color: $nav-link-color
+    border-bottom-color: #fff
+  &:hover a
+    color: $link-color
+  a:hover
+    color: $hover-link-color
 
 hr
   margin-bottom: 1.5em
@@ -49,7 +46,7 @@ a.button
   font-size: 90%
   text-decoration: none
   &:hover
-    background-color: #1f4076
+    background-color: #852B11
 
 div#content
   ul.browser-toolbar
