--- a/views/master.sass
+++ b/views/master.sass
@@ -1,19 +1,9 @@
 @import "mixins.sass"
+@import "colours.sass"
 
 // Variables
 
 $content-width: 37em
-
-$base-color: #262626
-$background-color: #fff
-$tint: #f1f1f3
-$border-color: #99d
-$link-color: #3F63DA
-$visited-link-color: darken($link-color, 15%)
-$hover-link-color: lighten($link-color, 15%)
-$active-link-color: darken($link-color, 50%)
-$nav-link-color: desaturate($link-color, 55%)
-$meta-color: #999
 
 $border-style: 1px dashed $border-color
 
@@ -26,7 +16,7 @@ $border-style: 1px dashed $border-color
 // Typography
 
 @mixin text-shadow
-  text-shadow: 0 2px 3px #ddd
+  text-shadow: 0 2px 3px #DCDBD1
 
 body
   font: ($base-font * 1.05) "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", Georgia, serif
