Use meta colour in side bar.

--- a/views/local.sass
+++ b/views/local.sass
@@ -11,7 +11,7 @@ code
     @include adjust-font-size(1, 2, 0)
 
   p
-    color: #999
+    color: $meta-color
 
   div.twitter
     padding-bottom: 5px
