Softened text shadow and lightened tint.

--- a/views/colours.sass
+++ b/views/colours.sass
@@ -1,6 +1,6 @@
 $base-color: #313126
 $background-color: #fff
-$tint: #F5F4E9
+$tint: #F9F7EF
 $border-color: #D7C28B
 $link-color: #D85700
 $visited-link-color: darken($link-color, 5%)
