Added Lanyrd badge.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -26,3 +26,4 @@
       = haml :header, :layout => false
       = yield
       = haml :footer, :layout => false
+    %script(src="http://cdn.lanyrd.net/badges/person-v1.min.js")
