--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -30,3 +30,7 @@
     %a(href="http://www.twitter.com/grahamashton")
       %img(src="http://twitter-badges.s3.amazonaws.com/follow_me-b.png" 
            alt="Follow grahamashton on Twitter") 
+
+  %p
+    %a.lanyrd-topbar.lanyrd-nolink.lanyrd-theme-city(href="http://lanyrd.com/people/grahamashton/" rel="me")
+      My conference schedule
