--- a/views/local.sass
+++ b/views/local.sass
@@ -4,6 +4,9 @@
 code
   @include adjust-font-size(0.95, 0, 0)
 
+body #lanyrd-topbar
+  @include adjust-font-size(0.909, 0, 0)
+
 #sidebar
   h1
     @include adjust-font-size(1, 1, 0)
