Don't show lanyrd badge when no conferences pending.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -32,5 +32,5 @@
            alt="Follow grahamashton on Twitter") 
 
   %p
-    %a.lanyrd-topbar.lanyrd-nolink.lanyrd-theme-city(href="http://lanyrd.com/people/grahamashton/" rel="me")
+    %a.lanyrd-topbar.lanyrd-noblank.lanyrd-nolink.lanyrd-theme-city(href="http://lanyrd.com/people/grahamashton/" rel="me")
       My conference schedule
