Updated 'About' section.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -3,8 +3,8 @@
 
   .bio
     :markdown
-      Effectif is the home of [Graham Ashton](http://grahamashton.net),
-      a web developer in London.
+      Effectif is a software company in London, run by
+      [Graham Ashton](http://grahamashton.net).
 
   %h1 Freelancing
 
