Updated link to Nesta.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -17,7 +17,8 @@
   %h1 Projects
   %ul.menu
     %li
-      %a{ :href => "/nesta" } Nesta CMS
+      Nesta, my
+      %a{ :href => "http://nestacms.com" } Ruby CMS
     %li
       %a{ :href => "/projects" } Recent software
     %li
