--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
       %meta(name="description" content=@description)
     - if @keywords
       %meta(name="keywords" content=@keywords)
+    %meta(name="google-site-verification" content="sb5WHndmXcsFDFjI1Uxmh9TtyioGQobkapIkNU5ZHTA")
     %title= @title
     <!--[if ! lte IE 6]><!-->
     %link(href="/css/master.css" media="screen" rel="stylesheet")
