Added coderwall page.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -10,19 +10,20 @@
 
   %p
     I'll be available for Ruby, Python or JavaScript work from
-    mid July 2011.
+    mid August 2011.
     = succeed "." do
       %a(href="mailto:graham@effectif.com") Get in touch
 
   %h1 Projects
   %ul.menu
     %li
-      Nesta, my
-      %a{ :href => "http://nestacms.com" } Ruby CMS
+      %a.github(href="http://github.com/gma") My github page
     %li
-      %a{ :href => "/projects" } Recent software
+      %a(href="http://coderwall.com/gma") My coderwall
     %li
-      %a{ :href => "http://github.com/gma", :class => "github" } My github page
+      %a(href="http://nestacms.com") Nesta (a Ruby CMS)
+    %li
+      %a(href="/projects") More&hellip;
 
   = haml :categories, :layout => false
   = haml :feed, :layout => false
