--- a/views/footer.haml
+++ b/views/footer.haml
@@ -2,7 +2,7 @@
   %p
     Powered by Nesta, a
     = succeed "." do
-      %a(href="http://effectif.com/nesta") Ruby CMS
+      %a(href="http://nestacms.com") Ruby CMS
     Design by
     = succeed "." do
       %a(href="http://effectif.com") Graham Ashton
