--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -10,7 +10,7 @@
 
   %p
     I'll be available for Ruby, Python or JavaScript work from
-    mid August 2011.
+    late September 2011.
     = succeed "." do
       %a(href="mailto:graham@effectif.com") Get in touch
 
