Added links to Zerply.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -4,22 +4,23 @@
   .bio
     :markdown
       Effectif is a software company in London, run by
-      [Graham Ashton](http://grahamashton.net).
+      [Graham Ashton](http://www.zerply.com/profile/grahamashton/public).
 
   %h1 Freelancing
 
-  %p
+  :markdown
     I'll be available for Ruby, Python or JavaScript work from
     late September 2011.
-    = succeed "." do
-      %a(href="mailto:graham@effectif.com") Get in touch
+
+    [Get in touch](mailto:graham@effectif.com) or read more about me on
+    [Zerply](http://www.zerply.com/profile/grahamashton/public).
 
   %h1 Projects
   %ul.menu
     %li
-      %a.github(href="http://github.com/gma") My github page
+      %a.github(href="http://github.com/gma") GitHub
     %li
-      %a(href="http://coderwall.com/gma") My coderwall
+      %a(href="http://coderwall.com/gma") Coderwall
     %li
       %a(href="http://nestacms.com") Nesta (a Ruby CMS)
     %li
