Shortened zerply links.

--- a/views/sidebar.haml
+++ b/views/sidebar.haml
@@ -4,7 +4,7 @@
   .bio
     :markdown
       Effectif is a software company in London, run by
-      [Graham Ashton](http://www.zerply.com/profile/grahamashton/public).
+      [Graham Ashton](http://zerp.ly/grahamashton).
 
   %h1 Freelancing
 
@@ -13,7 +13,7 @@
     late September 2011.
 
     [Get in touch](mailto:graham@effectif.com) or read more about me on
-    [Zerply](http://www.zerply.com/profile/grahamashton/public).
+    [Zerply](http://zerp.ly/grahamashton).
 
   %h1 Projects
   %ul.menu
