Configured rack-codehighlighter.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,7 @@
     %title= @title
     <!--[if ! lte IE 6]><!-->
     %link(href="/css/master.css" media="screen" rel="stylesheet")
+    %link(href="/css/coderay-railscasts.css" media="screen" rel="stylesheet")
     <!--<![endif]-->
     /[if lte IE 6]
       %link(rel="stylesheet" href="http://universal-ie6-css.googlecode.com/files/ie6.1.1.css" media="screen, projection")
